// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> it renders children 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  >
    <div
      className="mfui-button__content"
    >
      button
    </div>
  </div>
</button>
`;

exports[`<Button /> it renders spinner 1`] = `
<Button
  showSpinner={true}
>
  <button
    className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_loading mfui-button_no-touch"
    onClick={[Function]}
    type="button"
  >
    <div
      className="mfui-button__inner"
    >
      <div
        className="mfui-button__spinner"
      >
        <test-file-stub />
      </div>
    </div>
  </button>
</Button>
`;

exports[`<Button /> renders Button with default props 1`] = `
<button
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch"
  onClick={[Function]}
  type="button"
>
  <div
    className="mfui-button__inner"
  />
</button>
`;

exports[`<Button /> renders Button with props 1`] = `
<a
  className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_size-all_medium mfui-button_no-touch"
  disabled={false}
  href="any"
  onClick={[Function]}
  target="_blank"
>
  <div
    className="mfui-button__inner"
  />
</a>
`;

exports[`<Button /> with disabled state renders tag a 1`] = `
<Button
  disabled={true}
  href="test"
>
  <a
    className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_disabled mfui-button_size-all_medium mfui-button_no-touch"
    disabled={false}
    href="test"
    onClick={[Function]}
  >
    <div
      className="mfui-button__inner"
    />
  </a>
</Button>
`;

exports[`<Button /> with disabled state renders tag button 1`] = `
<Button
  disabled={true}
>
  <button
    className="mfui-button mfui-button_type_primary mfui-button_theme_green mfui-button_disabled mfui-button_size-all_medium mfui-button_no-touch"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <div
      className="mfui-button__inner"
    />
  </button>
</Button>
`;
